--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,8 +18,29 @@ body, html {
 }
 
 .section {
+  position: relative;
   width: 100%;
   min-height: 100vh;
+}
+.section.padded {
+  padding: 40px;
+}
+
+h1, h2, h3, h4, h5, p, a, ul, li, span {
+  margin-top: 0;
+  font-family: 'Roboto';
+  display: inline-block;
+  width: 100%;
+}
+
+h1, h2, h3, h4, h5 {
+  letter-spacing: 0.1px;
+  line-height: 1.8;
+}
+
+p {
+  font-size: 18px;
+  line-height: 1.3;
 }
 
 .white {
@@ -59,35 +80,13 @@ body, html {
   background-color: #37C656;
 }
 
-
-.section.padded {
-  padding: 40px;
-}
-
-h1, h2, h3, h4, h5, p, a, ul, li, span {
-  margin-top: 0;
-  font-family: 'Roboto';
-}
-
 .title {
   font-size: 40px;
-}
-
-h1, h2, h3, h4, h5 {
-  color: #222;
-  letter-spacing: 0.1px;
-  line-height: 1.8;
-}
-
-p {
-  color: #444;
-  font-size: 18px;
-  line-height: 1.3;
+  /*text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);*/
 }
 
 .text-center {
   text-align: center;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
 }
 
 .flex-center {
@@ -109,4 +108,28 @@ p {
   box-shadow: 3px 3px 5px -2px rgba(0,0,0,0.58);
 
   padding: 10px;
+}
+
+.chart-wrapper {
+  width: 100%;
+  padding-bottom: 64%;
+}
+
+.chart-wrapper .header {
+  position: relative;
+  height: 30px;
+}
+
+.header .play {
+  position: absolute;
+  top: 0;
+  right: 10px;
+  color: #222;
+}
+.header h3 {
+  width: auto;
+  position: absolute;
+  top: 0;
+  left: 10px;
+  margin: 0;
 }
