--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,7 +49,7 @@ p {
 }
 
 .white {
-  color: #e6e6e6;
+  color: #fff;
 }
 .white-bg {
   background-color: #e6e6e6;
@@ -112,7 +112,11 @@ p {
   -moz-box-shadow: 3px 3px 5px -2px rgba(0,0,0,0.58);
   box-shadow: 3px 3px 5px -2px rgba(0,0,0,0.58);
 
-  padding: 10px;
+  padding: 15px;
+}
+.padded-horizontal {
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .chart-wrapper {
@@ -137,6 +141,16 @@ p {
   top: 0;
   left: 10px;
   margin: 0;
+}
+
+.badge {
+  display: inline-block;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  font-weight: bold;
 }
 
 .bokeh-iframe {
