--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,6 +24,7 @@ body, html {
 }
 .section.padded {
   padding: 40px;
+  padding-bottom: 100px;
 }
 .section.full {
   min-height: 100vh;
@@ -84,10 +85,26 @@ p {
 .green-bg {
   background-color: #37C656;
 }
+.pink {
+  color: #ff9eb4;
+}
+.pink-bg {
+  background-color: #ff9eb4;
+}
 
 .title {
   font-size: 40px;
   /*text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);*/
+}
+
+.hint {
+  position: absolute;
+  top: 10px;
+  left: 12px;
+  opacity: 0.8;
+  line-height: 1;
+  padding: 0;
+  width: auto;
 }
 
 .text-center {
