--- a/stylesheet.css
+++ b/stylesheet.css
@@ -113,10 +113,20 @@ a {
   line-height: 1;
   padding: 0;
   width: auto;
-  opacity: 0.6;
+  opacity: 0.7;
 }
 .hint.white {
   opacity: 0.8;
+}
+
+.centerhint {
+  top: 10px;
+  position:absolute;
+  right:42%;
+  line-height: 1;
+  padding: 0;
+  width: auto;
+  opacity: 0.7;
 }
 
 .text-center {
